# Orchid

./: .env.example  .gitignore  CHANGELOG.md  alembic.ini  collaboration-zh.md  docker-compose.yml  future.md  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 0000_initial.py  0001_priority_queue.py  0002_span_columns.py
backend/: .dockerignore  Dockerfile  docker-entrypoint.sh  requirements.txt
backend/app/: config.py  main.py
backend/scripts/: recover_email.py
backend/skill-runner/: Dockerfile  contracts.py  loader.py  main.py  requirements.txt
backend/tests/: test_dag_consensus.py  test_dag_loops.py  test_researchclaw_example.py
examples/: ai-paper-blog-full-pipeline.json  ai-paper-blog-pipeline.json  auto-research-pipeline.json  autonomous-researchclaw-dag.json  bedtime-story-pipeline.json  blog-research-group.json  contract-retry-dag.json  daily-paper-digest-pipeline.json  professor-research-pipeline.json  research-directions-dag.json  research-directions-pipeline-v2.json  research-directions-pipeline.json  vendor-security-review-contract-dag.json
examples/skill-arxiv-papers/: SKILL.md  execute.py
examples/skill-in-depth-research/: SKILL.md  execute.py
examples/skill-multi-search/: SKILL.md  execute.py  package.json
examples/skill-research-radar/: SKILL.md  execute.py  package.json
examples/skill-weather/: SKILL.md  execute.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml
logs/: orchid-run-01KSQ6M3W5ZS-2026-05-28T14-33-14-077Z.json
scripts/: jira.ts  seed-jira.ts
skills/: package.json
(+146 files in other folders)
