[project]
name = "orchid-backend"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "redis[asyncio]>=5.2",
    "apscheduler>=3.10",
    # LLM
    "litellm>=1.55",
    "anthropic>=0.40",
    "openai>=1.55",
    # Tools
    "httpx>=0.27",
    "tavily-python>=0.5",
    # MCP
    "mcp>=1.0",
    # Utilities
    "pyyaml>=6.0",
    "python-ulid>=3.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
where = ["backend"]   # finds `app` package inside backend/

[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
